objects/Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account associated with Support Request</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application field value for corresponding account</description>
        <formula>TEXT (Account__r.Application__c)</formula>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_already_selected__c</fullName>
        <description>Contains all the comments entered for the services selected.</description>
        <label>Comments already entered</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Deal ID associated with the opportunity</description>
        <formula>Opportunity__r.DealID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_Position__c</fullName>
        <description>Forecasting Position of related opportunity.</description>
        <formula>TEXT(Opportunity__r.Position__c)</formula>
        <label>Forecasting Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Support_Requested__c</fullName>
        <description>Value of the field will be set to 0 if support is not requested, else it will be set to 1.</description>
        <formula>IF( INCLUDES( Support_Request_Type__c , 'Support not required'), 'No','Yes')</formula>
        <label>Is Support Requested</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Email__c</fullName>
        <description>Provides the email address of the LastModifiedBy person</description>
        <formula>LastModifiedBy.Email</formula>
        <label>Last Modified By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <description>Contains the Opportunity Owner's Name.</description>
        <label>Opportunity Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity associated with the Support Request</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Partner__c</fullName>
        <description>Primary Partner of the corresponding opportunity</description>
        <formula>Opportunity__r.Primary_Partner__r.Name</formula>
        <label>Primary Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UCS</fullName>
                    <default>true</default>
                    <label>UCS</label>
                </value>
                <value>
                    <fullName>SAC TV</fullName>
                </value>
                <value>
                    <fullName>SAC WebEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAC_MEET_COMP_UCS__c</fullName>
        <description>Is your UCS opportunity competing against an AMD, SPARC, or other RISC offer?</description>
        <label>SAC_MEET-COMP_UCS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I Don't Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Already_Selected__c</fullName>
        <description>Contains all the services selected</description>
        <label>Services Already Selected</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_Recently_Selected__c</fullName>
        <description>Contains all the recent services selected.</description>
        <label>Services Recently Selected</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Support Request</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Request_Type_Others__c</fullName>
        <description>Other type of Support Request requested for the Opportunity</description>
        <label>Comments for Support Provider</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Request_Type__c</fullName>
        <description>Type of the Support Requests requested for the opportunity.</description>
        <label>Support Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Software Service request</fullName>
                </value>
                <value>
                    <fullName>Advanced/Professional Services</fullName>
                </value>
                <value>
                    <fullName>Application / Data Center Migration</fullName>
                </value>
                <value>
                    <fullName>Application and Performance</fullName>
                </value>
                <value>
                    <fullName>Application Dependency Mapping</fullName>
                </value>
                <value>
                    <fullName>Architectural Assistance</fullName>
                </value>
                <value>
                    <fullName>Bill of Material(BOM)</fullName>
                </value>
                <value>
                    <fullName>Business Unit (BU)</fullName>
                </value>
                <value>
                    <fullName>Business Unit (BU) – VTG</fullName>
                </value>
                <value>
                    <fullName>Capacity Assurance Program</fullName>
                </value>
                <value>
                    <fullName>CBC/EBC Briefing</fullName>
                </value>
                <value>
                    <fullName>Channel Partners</fullName>
                </value>
                <value>
                    <fullName>Channels Support</fullName>
                </value>
                <value>
                    <fullName>Cisco/Tandberg Capital/Financing</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Compensation/Quota</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Create/Validate a Presentation</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement Letter</fullName>
                </value>
                <value>
                    <fullName>Customer Service/Operations</fullName>
                </value>
                <value>
                    <fullName>Deal Desk</fullName>
                </value>
                <value>
                    <fullName>Demo Equipment</fullName>
                </value>
                <value>
                    <fullName>Design Assistance</fullName>
                </value>
                <value>
                    <fullName>Ecosystem Partners</fullName>
                </value>
                <value>
                    <fullName>General Migration</fullName>
                </value>
                <value>
                    <fullName>Intel Competitive Discounts (MEET-COMP)</fullName>
                </value>
                <value>
                    <fullName>Interactive Workshop Briefing</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>NetApp FlexPod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>Theater associated with the opportunity</description>
        <formula>TEXT(Opportunity__r.Theater__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theater</label>
        <type>Text</type>
    </fields>
    <description>This objects captures the information about support requests selected by Account Manager.</description>
    <label>zzSupport Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Support Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>